// {C} Copyright 2017 Pensando Systems Inc. All rights reserved.

syntax = "proto3";

package certapi;

// --------------------------------- Certificates service API  -----------------------------------
//
// API for infrastructure components (controllers, agents, ...) to get CSR signed
// and retrieve trust roots.
//
service Certificates {
  // Have the Cluster CA sign the Supplied CSR
  rpc SignCertificateRequest (CertificateSignReq) returns (CertificateSignResp) {};

  // Retrieve the trust chain of the Cluster CA
  // The first certificate is the CA certificate, the last is the trust root of the CA
  rpc GetCaTrustChain (Empty) returns (CaTrustChain) {};

  // Retrieve trust roots that should be trusted by all cluster members
  // Includes the trust root of the Cluster CA
  rpc GetTrustRoots (Empty) returns (TrustRoots) {};
}

// Empty parameter
message Empty {
}

message Certificate {
  bytes certificate = 1;
}

message CertificateSignReq {
  bytes csr = 1;
}

message CertificateSignResp {
  Certificate certificate = 1;
}

message CaTrustChain {
  repeated Certificate certificates = 1;
}

message TrustRoots {
  repeated Certificate trustRoots = 1;
}
